# Hello

./: .gitignore  CMakeCache.txt  CMakeLists.txt
include/: calc.h
lib/math/: CMakeLists.txt  Maths.cpp  Maths.h
lib/myUtil/: CMakeLists.txt  MyUtil.cpp  myUtil.h
lib/optFile/: CMakeLists.txt  optFile.cpp  optFile.h
resouce/: test.txt
src/: calc.cpp  hello.cpp
